fixed bags on mobile

--- a/main.scss
+++ b/main.scss
@@ -178,13 +178,13 @@
       .player1 {
         position: absolute;
         top: 10px;
-        left: 17px;
+        left: 10px;
       }
 
       .player2 {
         position: absolute;
         top: 10px;
-        right: 20px;
+        right: 10px;
       }
     }
   }
